--- a/src/view/css/style.css
+++ b/src/view/css/style.css
@@ -29,7 +29,7 @@
     -fx-border-width: 2;
 }
 
-#vb-connect Button:hover {
+Button:hover {
     -fx-cursor: hand;
 }
 
@@ -37,4 +37,99 @@
     -fx-font-weight: bold;
     -fx-text-fill: red;
     -fx-font-size: 20px;
+}
+
+#start {
+    -fx-background-color: #FFFFFF;
+}
+
+#lobbies Button {
+    -fx-background-color: #F7B32B;
+    -fx-text-fill: white;
+    -fx-border-radius: 10px;
+    -fx-max-width: 200px;
+    -fx-font-size: 14px;
+    -fx-padding: 5px 10px 5px 10px;
+    -fx-effect: dropshadow(three-pass-box, #DDDDDD, 5, 0, 0, 6);
+}
+
+#lobbies TextField {
+    -fx-padding: 5px;
+    -fx-background-color: transparent;
+    -fx-border-width: 0 0 2 0;
+    -fx-border-color: #F7B32B;
+    -fx-max-width: 300px;
+    -fx-font-size: 14px;
+    -fx-text-fill: #000000;
+}
+
+#lblMessage {
+    -fx-text-fill: #461B4A;
+    -fx-font-weight: bold;
+    -fx-font-size: 16px;
+}
+
+#lblLobby {
+    -fx-text-fill: #F7B32B;
+    -fx-font-weight: bold;
+    -fx-font-size: 18px;
+}
+
+#error {
+    -fx-text-fill: red;
+    -fx-font-weight: 600;
+    -fx-font-size: 14px;
+}
+
+.list-view {
+    -fx-background-color: #f5f5f5;
+    -fx-font-size: 16px;
+}
+
+.list-cell {
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #333333;
+    -fx-padding: 10;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.1) , 5, 0.0 , 0 , 1 );
+    -fx-background-insets: 0, 0 0 1 0;
+}
+
+.list-cell:hover {
+    -fx-background-color: #ecf0f1;
+    -fx-cursor: hand;
+}
+
+.list-cell:selected {
+    -fx-background-color: #F7B32B;
+    -fx-text-fill: white;
+}
+
+.list-view:focused {
+    -fx-faint-focus-color: transparent;
+    -fx-focus-color: transparent;
+}
+
+.list-view:focused .list-cell:selected {
+    -fx-background-color: #F7B32B;
+}
+
+.scroll-bar:vertical {
+    -fx-background-color: #ecf0f1;
+}
+
+.scroll-bar:horizontal {
+    -fx-background-color: #ecf0f1;
+}
+
+.scroll-bar .thumb {
+    -fx-background-color: #F7B32B;
+}
+
+.scroll-bar .increment-button, .scroll-bar .decrement-button {
+    -fx-background-color: #bdc3c7;
+}
+
+.scroll-bar .increment-arrow, .scroll-bar .decrement-arrow {
+    -fx-background-color: #ffffff;
+    -fx-shape: "M0,0 L5,5 L10,0 Z";
 }
