--- a/src/view/css/style.css
+++ b/src/view/css/style.css
@@ -43,17 +43,17 @@ Button:hover {
     -fx-background-color: #FFFFFF;
 }
 
-#lobbies Button {
+#start-lobby Button {
     -fx-background-color: #F7B32B;
     -fx-text-fill: white;
     -fx-border-radius: 10px;
-    -fx-max-width: 200px;
+    /*-fx-max-width: 200px;*/
     -fx-font-size: 14px;
     -fx-padding: 5px 10px 5px 10px;
     -fx-effect: dropshadow(three-pass-box, #DDDDDD, 5, 0, 0, 6);
 }
 
-#lobbies TextField {
+#start-lobby TextField {
     -fx-padding: 5px;
     -fx-background-color: transparent;
     -fx-border-width: 0 0 2 0;
