--- a/src/view/css/style.css
+++ b/src/view/css/style.css
@@ -20,7 +20,7 @@
     -fx-border-width: 0 0 2 0;
     -fx-border-color: #FFFFFF;
     -fx-max-width: 350px;
-    -fx-font-size: 15px;
+    -fx-font-size: 18px;
     -fx-text-fill: #FFFFFF;
     -fx-prompt-text-fill: #FFFFFF;
 }
@@ -38,12 +38,6 @@ Button:hover {
     -fx-cursor: hand;
 }
 
-#vb-connect Label {
-    -fx-font-weight: bold;
-    -fx-text-fill: red;
-    -fx-font-size: 20px;
-}
-
 #start {
     -fx-background-color: #FFFFFF;
 }
@@ -52,7 +46,6 @@ Button:hover {
     -fx-background-color: #F7B32B;
     -fx-text-fill: white;
     -fx-border-radius: 10px;
-    /*-fx-max-width: 200px;*/
     -fx-font-size: 14px;
     -fx-padding: 5px 10px 5px 10px;
     -fx-effect: dropshadow(three-pass-box, #DDDDDD, 5, 0, 0, 6);
@@ -144,11 +137,16 @@ Button:hover {
 }
 
 #game Button:hover {
-    -fx-translate-y: -5px;
+    -fx-translate-y: -10px;
 }
 
 #game Label {
     -fx-text-fill: #FFFFFF;
     -fx-font-size: 20px;
     -fx-font-weight: bold;
+}
+
+.scroll-pane {
+    -fx-background-color: transparent;
+    -fx-background: transparent;
 }
